--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <style>
+        body {
+            background-color: white;
+            font-family: "Helvetica";
+            color: blue;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Anna-Luisa</h1>
-    <p>hello!</p>
+    <h1> Hi, you've reached Anna-Luisa's website </h1>
+    <a href="https://en.wikipedia.org/wiki/Main_Page">Wikipedia</a>
+    <br>
+    <a href="https://www.google.com/">Google</a>
+    
+    <a href="about.html">About</a>
 </body>
+
 </html>
