--- a/index.html
+++ b/index.html
@@ -5,18 +5,15 @@
         body {
             background-color: white;
             font-family: "Helvetica";
-            color: blue;
+            color: #000080;
         }
     </style>
 </head>
 
 <body>
-    <h1> Hi, you've reached Anna-Luisa's website </h1>
-    <a href="https://en.wikipedia.org/wiki/Main_Page">Wikipedia</a>
+    <h1> <small> Hi, you've reached Anna-Luisa's website </small> </h1>
     <br>
-    <a href="https://www.google.com/">Google</a>
-    
-    <a href="about.html">About</a>
+    <a href="about.html">about</a>
 </body>
 
 </html>
