--- a/index.html
+++ b/index.html
@@ -1,19 +1,35 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-    <style>
-        body {
-            background-color: white;
-            font-family: "Helvetica";
-            color: #000080;
-        }
-    </style>
+  <style>
+    body {
+      background-color: ivory;
+    }
+    p {
+      color: navy;
+      font-family: "Helvetica";
+    }
+    a {
+      color: navy;
+      text-decoration: none;
+    }
+    a:hover {
+      cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' fill='mustard' width='32' height='32'><polygon points='0,16 16,0 32,16'/></svg>"), auto;
+    }
+  </style>
 </head>
 
 <body>
-    <h1> <small> Hi, you've reached Anna-Luisa's website </small> </h1>
-    <br>
-    <a href="about.html">about</a>
+  <h1> Anna-Luisa</h1>
+  <p>
+    hello and welcome!
+  </p>
+  <ul>
+    <li><a href="about.html"> about </a></li>
+    <li><a href="food.html"> food </a></li>
+    <li><a href="writing.html"> words </a></li>
+  </ul>
 </body>
 
 </html>
